--- a/repositorio/frontend/src/index.css
+++ b/repositorio/frontend/src/index.css
@@ -3,7 +3,7 @@ body {
   font-size: 16px;
   line-height: 1.6;
   color: var(--color-text);
-  background-color: var(--color-bg);
+  background-color:rgba(213, 221, 240, 0.79);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -30,7 +30,9 @@ a:hover {
   max-width: 1200px;
   margin: 2rem auto;
   padding: 0 1rem;
+  margin-top: 5rem;
 }
+
 
 button, .btn {
   display: inline-block;
@@ -43,15 +45,16 @@ button, .btn {
   color: #ffffff;
   cursor: pointer;
   transition: background-color var(--transition);
+  border-radius: 7px;
+  padding-top: 0.5rem;
 }
 button:hover, .btn:hover {
-
+  background-color: var(--color-secondary);
+  transform: scale(1.02);
 }
 
 input, textarea, select {
   width: 100%;
-  padding: 0.5rem 1rem;
-  margin-bottom: 1rem;
   border: 1px solid #cccccc;
   border-radius: var(--border-radius);
   font-family: inherit;
