--- a/repositorio/frontend/src/index.css
+++ b/repositorio/frontend/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: var(--font-base);
+  font-family:  Arial, Helvetica, sans-serif;;
   font-size: 16px;
   line-height: 1.6;
   color: var(--color-text);
